// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -10000 token0 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -10000 token1 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 39,
      "range_check_builtin": 1717,
    },
    "n_steps": 23560,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 38,
      "range_check_builtin": 1665,
    },
    "n_steps": 22114,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 40,
      "range_check_builtin": 1777,
    },
    "n_steps": 23777,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 43,
      "range_check_builtin": 1999,
    },
    "n_steps": 26566,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 40,
      "range_check_builtin": 1636,
    },
    "n_steps": 22909,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 43,
      "range_check_builtin": 2060,
    },
    "n_steps": 26376,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 39,
      "range_check_builtin": 1717,
    },
    "n_steps": 23561,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 38,
      "range_check_builtin": 1665,
    },
    "n_steps": 22115,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10032n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 38,
      "range_check_builtin": 1890,
    },
    "n_steps": 23727,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941866287043816850431081895n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10032n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 39,
      "range_check_builtin": 1928,
    },
    "n_steps": 25639,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935060639705398047133577709n,
  "tick_after": -1n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_ZEROED",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_ZEROED",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_ZEROED",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_ZEROED",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9969n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 39,
      "range_check_builtin": 1859,
    },
    "n_steps": 25232,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": -1n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9969n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 38,
      "range_check_builtin": 1834,
    },
    "n_steps": 23378,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 40,
      "range_check_builtin": 2124,
    },
    "n_steps": 26642,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 43,
      "range_check_builtin": 2346,
    },
    "n_steps": 29431,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 40,
      "range_check_builtin": 2009,
    },
    "n_steps": 25711,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 43,
      "range_check_builtin": 2433,
    },
    "n_steps": 29178,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -999999999987340232n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 945,
      "pedersen_builtin": 72,
      "range_check_builtin": 24949,
    },
    "n_steps": 206140,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 4307890968852183321656454888n,
  "tick_after": -50185212n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -999999999987340232n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 918,
      "pedersen_builtin": 71,
      "range_check_builtin": 24717,
    },
    "n_steps": 198225,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 26879066827489470242203952493307087579544590886863n,
  "tick_after": 50185211n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10032n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1902,
    },
    "n_steps": 23853,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941866287043816850431081895n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_ZEROED",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_ZEROED",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1649,
      "pedersen_builtin": 102,
      "range_check_builtin": 27111,
    },
    "n_steps": 216948,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9969n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1846,
    },
    "n_steps": 23504,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 45,
      "range_check_builtin": 2572,
    },
    "n_steps": 29095,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 299,
      "pedersen_builtin": 102,
      "range_check_builtin": 8471,
    },
    "n_steps": 93172,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 40,
      "range_check_builtin": 2021,
    },
    "n_steps": 25837,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 43,
      "range_check_builtin": 2445,
    },
    "n_steps": 29304,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1649,
      "pedersen_builtin": 102,
      "range_check_builtin": 27111,
    },
    "n_steps": 216948,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -999999999987340232n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 919,
      "pedersen_builtin": 71,
      "range_check_builtin": 24729,
    },
    "n_steps": 198351,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 26879066827489470242203952493307087579544590886863n,
  "tick_after": 50185211n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10032n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 51,
      "range_check_builtin": 1988,
    },
    "n_steps": 26613,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935060639705398047133577709n,
  "tick_after": -1n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_ZEROED",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_ZEROED",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9969n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 51,
      "range_check_builtin": 1919,
    },
    "n_steps": 26206,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": -1n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1621,
      "pedersen_builtin": 89,
      "range_check_builtin": 27659,
    },
    "n_steps": 213061,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 53,
      "range_check_builtin": 2342,
    },
    "n_steps": 29589,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 56,
      "range_check_builtin": 2534,
    },
    "n_steps": 32231,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 32,
      "range_check_builtin": 1529,
    },
    "n_steps": 20594,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 271,
      "pedersen_builtin": 89,
      "range_check_builtin": 8039,
    },
    "n_steps": 83468,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -999999999987340232n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 947,
      "pedersen_builtin": 84,
      "range_check_builtin": 25009,
    },
    "n_steps": 207114,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 4307890968852183321656454888n,
  "tick_after": -50185212n,
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1621,
      "pedersen_builtin": 89,
      "range_check_builtin": 27659,
    },
    "n_steps": 213061,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10001n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1938,
    },
    "n_steps": 23993,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431771614280n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10001n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 84,
      "pedersen_builtin": 39,
      "range_check_builtin": 2012,
    },
    "n_steps": 26400,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431764808632n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1000000000000000002n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1946,
    },
    "n_steps": 24048,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706675260n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1000000000000000002n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1947,
    },
    "n_steps": 24047,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706675260n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000002n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 57,
      "pedersen_builtin": 39,
      "range_check_builtin": 2016,
    },
    "n_steps": 25783,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829747992n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000002n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 57,
      "pedersen_builtin": 39,
      "range_check_builtin": 2016,
    },
    "n_steps": 25791,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829747992n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9999n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 84,
      "pedersen_builtin": 39,
      "range_check_builtin": 1945,
    },
    "n_steps": 25998,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431764808633n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9999n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1884,
    },
    "n_steps": 23649,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431771614279n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -999999999999999998n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 57,
      "pedersen_builtin": 39,
      "range_check_builtin": 1950,
    },
    "n_steps": 25390,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829748333n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -999999999999999998n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 57,
      "pedersen_builtin": 39,
      "range_check_builtin": 1950,
    },
    "n_steps": 25398,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829748333n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -999999999999999998n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1892,
    },
    "n_steps": 23704,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706674919n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -999999999999999998n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1893,
    },
    "n_steps": 23703,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706674919n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -79228156237163099530060194283n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 84,
      "pedersen_builtin": 39,
      "range_check_builtin": 1955,
    },
    "n_steps": 26058,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282339960993932299601503360233022685n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -79228156237163099530060194283n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 38,
      "range_check_builtin": 1894,
    },
    "n_steps": 23709,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282393880885130614014402098783298475n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10032n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 38,
      "range_check_builtin": 1880,
    },
    "n_steps": 23667,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374650381441171457n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10032n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 39,
      "range_check_builtin": 1916,
    },
    "n_steps": 25506,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374564482095251456n,
  "tick_after": -1n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1003009027093903486n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 40,
      "range_check_builtin": 1856,
    },
    "n_steps": 24491,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925233430759428817540393170906n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1003009027093903486n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 43,
      "range_check_builtin": 2280,
    },
    "n_steps": 27958,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925233430759428817540393170906n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1003009027093903486n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 40,
      "range_check_builtin": 1980,
    },
    "n_steps": 25743,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916643496167374607431768211456n,
  "tick_after": -1n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 1003009027093903486n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 43,
      "range_check_builtin": 2202,
    },
    "n_steps": 28532,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916643496167374607431768211456n,
  "tick_after": -1n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9969n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 39,
      "range_check_builtin": 1851,
    },
    "n_steps": 25184,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374564610944270337n,
  "tick_after": -1n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9969n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 38,
      "range_check_builtin": 1826,
    },
    "n_steps": 23330,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374650252592152576n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -996999999987453842n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 40,
      "range_check_builtin": 1923,
    },
    "n_steps": 25472,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916656381069316492767631040557n,
  "tick_after": -1n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -996999999987453842n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 43,
      "range_check_builtin": 2145,
    },
    "n_steps": 28261,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916656381069316492767631040557n,
  "tick_after": -1n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -996999999987453842n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 40,
      "range_check_builtin": 1807,
    },
    "n_steps": 24184,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925220545857486607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -996999999987453842n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 43,
      "range_check_builtin": 2231,
    },
    "n_steps": 27651,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925220545857486607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -39554570869665270195675172000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 39,
      "range_check_builtin": 2071,
    },
    "n_steps": 26468,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 170396778628411849505946223051528149971n,
  "tick_after": -1383293n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -39554570869665270195675172000n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 38,
      "range_check_builtin": 2042,
    },
    "n_steps": 24938,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 679543886741114111536359091036980510720n,
  "tick_after": 1383292n,
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 376,
    },
    "n_steps": 11241,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 3240,
      "pedersen_builtin": 149,
      "range_check_builtin": 53731,
    },
    "n_steps": 417932,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 594,
      "pedersen_builtin": 92,
      "range_check_builtin": 14132,
    },
    "n_steps": 129281,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 540,
      "pedersen_builtin": 149,
      "range_check_builtin": 15801,
    },
    "n_steps": 165880,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 3240,
      "pedersen_builtin": 149,
      "range_check_builtin": 53731,
    },
    "n_steps": 417932,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 380,
    },
    "n_steps": 11323,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722883n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 379,
    },
    "n_steps": 11313,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722883n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 90,
      "range_check_builtin": 27945,
    },
    "n_steps": 218922,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 90,
      "range_check_builtin": 27945,
    },
    "n_steps": 218922,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 381,
    },
    "n_steps": 11356,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722883n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 3240,
      "pedersen_builtin": 149,
      "range_check_builtin": 54048,
    },
    "n_steps": 412217,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 381,
    },
    "n_steps": 11356,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722883n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 567,
      "pedersen_builtin": 92,
      "range_check_builtin": 12668,
    },
    "n_steps": 119147,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 540,
      "pedersen_builtin": 149,
      "range_check_builtin": 15538,
    },
    "n_steps": 157728,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 381,
    },
    "n_steps": 11356,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722883n,
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 3240,
      "pedersen_builtin": 149,
      "range_check_builtin": 54048,
    },
    "n_steps": 412217,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 90,
      "range_check_builtin": 27051,
    },
    "n_steps": 215967,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 89,
      "range_check_builtin": 27647,
    },
    "n_steps": 212935,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 32,
      "range_check_builtin": 2354,
    },
    "n_steps": 26141,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 297,
      "pedersen_builtin": 90,
      "range_check_builtin": 8835,
    },
    "n_steps": 94283,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 32,
      "range_check_builtin": 1517,
    },
    "n_steps": 20468,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 270,
      "pedersen_builtin": 89,
      "range_check_builtin": 8027,
    },
    "n_steps": 83342,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 90,
      "range_check_builtin": 27051,
    },
    "n_steps": 215967,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 89,
      "range_check_builtin": 27647,
    },
    "n_steps": 212935,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 90,
      "range_check_builtin": 27051,
    },
    "n_steps": 215967,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 89,
      "range_check_builtin": 27647,
    },
    "n_steps": 212935,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 32,
      "range_check_builtin": 2354,
    },
    "n_steps": 26141,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 297,
      "pedersen_builtin": 90,
      "range_check_builtin": 8835,
    },
    "n_steps": 94283,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 32,
      "range_check_builtin": 1517,
    },
    "n_steps": 20468,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 270,
      "pedersen_builtin": 89,
      "range_check_builtin": 8027,
    },
    "n_steps": 83342,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 90,
      "range_check_builtin": 27051,
    },
    "n_steps": 215967,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 89,
      "range_check_builtin": 27647,
    },
    "n_steps": 212935,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -10000 token0 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -10000 token1 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 10000 token0 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 10000 token1 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "End of program was not reached",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 31,
      "range_check_builtin": 903,
    },
    "n_steps": 16263,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 30,
      "range_check_builtin": 849,
    },
    "n_steps": 14707,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 31,
      "range_check_builtin": 2349,
    },
    "n_steps": 25540,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 31,
      "range_check_builtin": 899,
    },
    "n_steps": 15609,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 30,
      "range_check_builtin": 1604,
    },
    "n_steps": 19952,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 30,
      "range_check_builtin": 849,
    },
    "n_steps": 14707,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 31,
      "range_check_builtin": 903,
    },
    "n_steps": 16263,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 30,
      "range_check_builtin": 849,
    },
    "n_steps": 14707,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10516n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 51,
      "range_check_builtin": 2953,
    },
    "n_steps": 32585,
  },
  "liquidity_after": 150019n,
  "sqrt_ratio_after": 358548395291435633147515612429947974483n,
  "tick_after": 104575n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10647n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 114,
      "pedersen_builtin": 54,
      "range_check_builtin": 2857,
    },
    "n_steps": 33949,
  },
  "liquidity_after": 100009n,
  "sqrt_ratio_after": 318197518696337062819639931106676301593n,
  "tick_after": -134207n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11242,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 29,
      "range_check_builtin": 375,
    },
    "n_steps": 11236,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9433n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 114,
      "pedersen_builtin": 54,
      "range_check_builtin": 2883,
    },
    "n_steps": 34156,
  },
  "liquidity_after": 100009n,
  "sqrt_ratio_after": 320125855863226297598523424027276983985n,
  "tick_after": -122124n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9536n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 51,
      "range_check_builtin": 2536,
    },
    "n_steps": 29838,
  },
  "liquidity_after": 150019n,
  "sqrt_ratio_after": 357384707370995463786432309339396758729n,
  "tick_after": 98074n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 13101n,
    "amount1": -12092n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 142,
      "pedersen_builtin": 59,
      "range_check_builtin": 3925,
    },
    "n_steps": 42827,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 13101n,
    "amount1": -12092n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 358,
      "pedersen_builtin": 116,
      "range_check_builtin": 9824,
    },
    "n_steps": 106904,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -15232n,
    "amount1": 16564n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 84,
      "pedersen_builtin": 56,
      "range_check_builtin": 2891,
    },
    "n_steps": 33970,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -15232n,
    "amount1": 16564n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 327,
      "pedersen_builtin": 113,
      "range_check_builtin": 9401,
    },
    "n_steps": 96849,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 13101n,
    "amount1": -12092n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1708,
      "pedersen_builtin": 116,
      "range_check_builtin": 28464,
    },
    "n_steps": 230680,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -15232n,
    "amount1": 16564n,
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1677,
      "pedersen_builtin": 113,
      "range_check_builtin": 29021,
    },
    "n_steps": 226442,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;
